welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:3: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono2:3: error: expected start of definition
override def run() {
         ^